# sentinel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
benchmarks/: README.md  requirements.txt  run_benchmarks.py
benchmarks/results/: benchmark_results.json
python/sentinel_rs/: __init__.py
scripts/: generate_logs.py
sentinel_rs/: __init__.py
src/: lib.rs
test_env/: pyvenv.cfg
tests/: test_all.py  test_basic.py
